--- a/ti4legendaryplanets.html
+++ b/ti4legendaryplanets.html
@@ -30,7 +30,7 @@
   </style>
 </head>
 <body>
-  <a href="https://www.dfwgamingvillage.com/ti.html" style="display: inline-block; margin-bottom: 15px; padding: 8px 12px; background-color: #f9d342; color: #000; text-decoration: none; border-radius: 5px; font-weight: bold;">← Back to TI4 Faction Database</a>
+  <a href="/" style="display: inline-block; margin-bottom: 15px; padding: 8px 12px; background-color: #f9d342; color: #000; text-decoration: none; border-radius: 5px; font-weight: bold;">← Back to TI4 Faction Database</a>
   <h1><img src="images/legendary.png" alt="Legendary Icon" style="height: 1em; vertical-align: middle; margin-right: 10px;" />Twilight Imperium 4 Legendary Planets<img src="images/legendary.png" alt="Legendary Icon" style="height: 1em; vertical-align: middle; margin-left: 10px;" /></h1>
   <label><input type="checkbox" id="toggleDS" checked /> Show Discordant Stars Planets</label>
 
@@ -72,6 +72,11 @@
   <div class="planet ds-only">
     <strong>Domna</strong> <img src="images/hazardous.png" alt="Hazardous" style="height: 16px; vertical-align: middle;" />, Nebula — <em>2 / 1</em><br>
     <strong>Fractal Gate:</strong> You may exhaust this card at the end of your turn to remove 1 of your ships from the game board and place that unit in an adjacent system that does not contain another player’s ships.
+  </div>
+  <div class="planet ds-only">
+    <strong>Kwon</strong> <img src="images/cultural.png" alt="Cultural" style="height: 16px; vertical-align: middle;" />, — <em>3 / 3</em><br>
+    <strong>Interstellar Gate:</strong> <em>When this card enters play, attach it to the unlocked commander of a random unchosen faction. This card has the text of the attached commander.</em><br>
+    While you control this planet, your commodity value is decreased by 1.
   </div>
 
   <script>
