--- a/ti4tech.html
+++ b/ti4tech.html
@@ -39,7 +39,7 @@
   </style>
 </head>
 <body>
-  <a href="ti.html" style="display:inline-block; margin-bottom:15px; background:#333; color:white; padding:10px 20px; border-radius:5px; text-decoration:none;">← Return to TI4 Faction Database</a>
+  <a href="/" style="display:inline-block; margin-bottom:15px; background:#333; color:white; padding:10px 20px; border-radius:5px; text-decoration:none;">← Return to TI4 Faction Database</a>
 
   <h1>Twilight Imperium 4: Technologies Reference</h1>
 
@@ -74,7 +74,8 @@
     </span></div>
 
     <div class="tech"><strong>X-89 Bacterial Weapon Ω</strong><br>
-    After 1 or more of your units use BOMBARDMENT against a planet, if at least 1 of your opponent's infantry was destroyed, you may destroy all of your opponent's infantry on that planet.<br>
+    Double the hits produced by your units' BOMBARDMENT and ground combat rolls.<br>
+    Exhaust each planet you use BOMBARDMENT against.<br>
     <span class="prereq">Prerequisite:
       <img src="images/biotic.png" class="icon">
       <img src="images/biotic.png" class="icon">
@@ -175,6 +176,7 @@
     <span class="prereq">Prerequisite: None</span></div>
 
     <div class="tech"><strong>Magen Defense Grid Ω</strong><br>
+    When any player activates a system that contains 1 or more of your structures, place 1 infantry from your reinforcements with each of those structures.<br>
     At the start of ground combat on a planet that contains 1 or more of your structures, you may produce 1 hit and assign it to 1 of your opponent's ground forces.<br>
     <span class="prereq">Prerequisite:
       <img src="images/warfare.png" class="icon">
