fan events hidden by default

--- a/ti4events.html
+++ b/ti4events.html
@@ -44,9 +44,9 @@
             padding: 0;
         }
 
-        /* .ds-only {
-            display: block;
-        } */
+        .fan-only {
+            display: none;
+        }
 
         label {
             font-size: 16px;
@@ -68,7 +68,7 @@
         ← Back to TI4 Faction Database
     </a>
     <h1>Twilight Imperium 4 Galactic Events</h1>
-    <label><input type="checkbox" id="toggleDS" checked /> Show Fanmade Events</label>
+    <label><input type="checkbox" id="toggleDS" /> Show Fanmade Events</label>
     <h2>Codex IV Galactic Events</h2>
     <div class="eventMenu">
         <div class="event">
