--- a/ti4events.html
+++ b/ti4events.html
@@ -27,6 +27,13 @@
             gap: 10px;
         }
 
+        /* Responsive layout - makes a one column layout instead of a two-column layout */
+        @media (max-width: 800px) {
+            .eventMenu {
+                flex-direction: column;
+            }
+        }
+
         .event {
             margin-bottom: 20px;
             padding: 10px;
@@ -34,7 +41,6 @@
             border-radius: 8px;
             background-color: #2c2c2c;
             flex: 1 1 calc(33.33% - 20px);
-            max-width: 40%;
             transition: background 0.3s;
         }
 
