--- a/ti4events.html
+++ b/ti4events.html
@@ -78,95 +78,88 @@
     <h2>Codex IV Galactic Events</h2>
     <div class="eventMenu">
         <div class="event">
+            <img src="images/galactic_events/Advent of the War Sun.jpg" />
+        </div>
+        <div class="event">
             <img src="images/galactic_events/Age of Commerce.jpg" />
+        </div>
+        <div class="event">
+            <img src="images/galactic_events/Dangerous Wilds.jpg" />
+        </div>
+        <div class="event">
+            <img src="images/galactic_events/Mercenaries for Hire.jpg" />
+        </div>
+        <div class="event">
+            <img src="images/galactic_events/Rapid Mobilization.jpg" />
+        </div>
+        <div class="event">
+            <img src="images/galactic_events/Zealous Orthodoxy.jpg" />
         </div>
         <div class="event">
             <img src="images/galactic_events/Age of Exploration.jpg" />
         </div>
         <div class="event">
+            <img src="images/galactic_events/Civilized Society.jpg" />
+        </div>
+        <div class="event">
+            <img src="images/galactic_events/Cosmic Phenomenae.jpg" />
+        </div>
+        <div class="event">
+            <img src="images/galactic_events/Cultural Exchange Program.jpg" />
+        </div>
+        <div class="event">
+            <img src="images/galactic_events/Hidden Agenda.jpg" />
+        </div>
+        <div class="event">
             <img src="images/galactic_events/Minor Factions.jpg" />
         </div>
         <div class="event">
+            <img src="images/galactic_events/Monuments to the Ages.jpg" />
+        </div>
+        <div class="event">
+            <img src="images/galactic_events/Stellar Atomics.jpg" />
+        </div>
+        <div class="event">
+            <img src="images/galactic_events/Age of Fighters.jpg" />
+        </div>
+        <div class="event">
+            <img src="images/galactic_events/Conventions of War Abandoned.jpg" />
+        </div>
+        <div class="event">
             <img src="images/galactic_events/Total War.jpg" />
+        </div>
+        <div class="event">
+            <img src="images/galactic_events/Weird Wormholes.jpg" />
+        </div>
+        <div class="event">
+            <img src="images/galactic_events/Wild, Wild Galaxy.jpg" />
+        </div>
+        <div class="event">
         </div>
     </div>
 
     <h2 class="fan-only">My Galactic Events</h2>
     <div class="eventMenu">
         <div class="event fan-only">
-            <img src="images/galactic_events/Aggressive Custodians.jpg" />
+            <img src="images/galactic_events/fanmade/Aggressive Custodians.jpg" />
         </div>
         <div class="event fan-only">
-            <img src="images/galactic_events/Bureaucracy.jpg" />
+            <img src="images/galactic_events/fanmade/Bureaucracy.jpg" />
         </div>
         <div class="event fan-only">
-            <img src="images/galactic_events/Council Patience.jpg" />
+            <img src="images/galactic_events/fanmade/Council Influence.jpg" />
         </div>
         <div class="event fan-only">
-            <img src="images/galactic_events/Relic Technologies.jpg" />
-        </div>
-        <div class="event fan-only">
-            <img src="images/galactic_events/Thunderdome.jpg" />
-        </div>
-        <div class="event fan-only">
-            <img src="images/galactic_events/Twilight Assembly.jpg" />
+            <img src="images/galactic_events/fanmade/Relic Technologies.jpg" />
         </div>
     </div>
 
-    <h2 class="fan-only">Community Galactic Events</h2>
+    <!-- <h2 class="fan-only">Community Galactic Events</h2>
     <div class="eventMenu">
         <div class="event fan-only">
             <img src="images/galactic_events/Broken Translators.png" />
         </div>
-        <div class="event fan-only">
-            <img src="images/galactic_events/It's a Stellar Conversion.png" />
-        </div>
-        <div class="event fan-only">
-            <img src="images/galactic_events/Monolithic.png" />
-        </div>
-        <div class="event fan-only">
-            <img src="images/galactic_events/Weapons Team.png" />
-        </div>
-        <div class="event fan-only">
-            <img src="images/galactic_events/Domination of the Weak.jpg" />
-        </div>
-        <div class="event fan-only">
-            <img src="images/galactic_events/Little Big Planet.png" />
-        </div>
-        <div class="event fan-only">
-            <img src="images/galactic_events/Council's Decree.png" />
-        </div>
-        <div class="event fan-only">
-            <img src="images/galactic_events/Spoken For.png" />
-        </div>
-        <div class="event fan-only">
-            <img src="images/galactic_events/Who Watches the Watchers.png" />
-        </div>
-        <div class="event fan-only">
-            <img src="images/galactic_events/Age of Conquest.jpg" />
-        </div>
-        <div class="event fan-only">
-            <img src="images/galactic_events/The Big Crunch.png" />
-        </div>
-        <div class="event fan-only">
-            <img src="images/galactic_events/Galactic Depository.png" />
-        </div>
-        <div class="event fan-only">
-            <img src="images/galactic_events/Hidden Agenda.png" />
-        </div>
-        <div class="event fan-only">
-            <img src="images/galactic_events/Hitting Close to Home.png" />
-        </div>
-        <div class="event fan-only">
-            <img src="images/galactic_events/Hot Hands.png" />
-        </div>
-        <div class="event fan-only">
-            <img src="images/galactic_events/The Master's Plan.png" />
-        </div>
-        <div class="event fan-only">
-            <img src="images/galactic_events/Shift Happens.png" />
-        </div>
-    </div>
+    </div> -->
 
     <script>
         document.getElementById('toggleDS').addEventListener('change', function () {
