--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 
 <body>
 
-    <a href="/"
+    <a href="."
         style="display:inline-block; margin-bottom:15px; background:#333; color:white; padding:10px 20px; border-radius:5px; text-decoration:none;">
         ← Faction Reference
     </a>
