--- a/ti4events.html
+++ b/ti4events.html
@@ -62,7 +62,7 @@
 </head>
 
 <body>
-    <a href="/" style="display: inline-block; 
+    <a href="." style="display: inline-block; 
         margin-bottom: 15px; 
         padding: 8px 12px; 
         background-color: #f9d342; 
